fix speed visibility

--- a/day 19/style.css
+++ b/day 19/style.css
@@ -67,6 +67,7 @@ body {
 span.speed {
     font-weight: 700;
     color: #005d99;
+    visibility: hidden;
 }
 .draggable {
   cursor: pointer;
